--- a/odkl_test_task_akramovmv.ipynb
+++ b/odkl_test_task_akramovmv.ipynb
@@ -15,7 +15,7 @@
         "eQVhV-fRCrIY"
       ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMkhDxyd7zovpc0plHVoEpl",
+      "authorship_tag": "ABX9TyMKmRJWhuHFSANnTpuenZo5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -909,9 +909,9 @@
         "    'user_id': ['count', 'nunique'],  \n",
         "    'is_purchaser': ['count', 'nunique'],\n",
         "    'revenue': ['sum', 'max']\n",
-        "})"
+        "}).reset_index()"
       ],
-      "execution_count": 172,
+      "execution_count": 182,
       "outputs": []
     },
     {
@@ -919,15 +919,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 175
+          "height": 143
         },
         "id": "HN_wN0cHgpgH",
-        "outputId": "1c9ffbb7-0f16-4ba9-b121-13b222e3feb6"
+        "outputId": "c607e2d4-77ac-4de0-b0a8-359753736670"
       },
       "source": [
         "groups"
       ],
-      "execution_count": 154,
+      "execution_count": 183,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -946,67 +946,61 @@
               "    .dataframe thead tr th {\n",
               "        text-align: left;\n",
               "    }\n",
-              "\n",
-              "    .dataframe thead tr:last-of-type th {\n",
-              "        text-align: right;\n",
-              "    }\n",
               "</style>\n",
               "<table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
               "    <tr>\n",
               "      <th></th>\n",
+              "      <th>variant_name</th>\n",
               "      <th colspan=\"2\" halign=\"left\">user_id</th>\n",
               "      <th colspan=\"2\" halign=\"left\">is_purchaser</th>\n",
-              "      <th>revenue</th>\n",
+              "      <th colspan=\"2\" halign=\"left\">revenue</th>\n",
               "    </tr>\n",
               "    <tr>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th>count</th>\n",
               "      <th>nunique</th>\n",
               "      <th>count</th>\n",
               "      <th>nunique</th>\n",
               "      <th>sum</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>variant_name</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
+              "      <th>max</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>control</th>\n",
+              "      <th>0</th>\n",
+              "      <td>control</td>\n",
               "      <td>3026</td>\n",
               "      <td>2390</td>\n",
               "      <td>54</td>\n",
               "      <td>54</td>\n",
               "      <td>470.56</td>\n",
+              "      <td>196.01</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>variant</th>\n",
+              "      <th>1</th>\n",
+              "      <td>variant</td>\n",
               "      <td>3044</td>\n",
               "      <td>2393</td>\n",
               "      <td>43</td>\n",
               "      <td>42</td>\n",
               "      <td>179.32</td>\n",
+              "      <td>23.04</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "             user_id         is_purchaser         revenue\n",
-              "               count nunique        count nunique     sum\n",
-              "variant_name                                             \n",
-              "control         3026    2390           54      54  470.56\n",
-              "variant         3044    2393           43      42  179.32"
+              "  variant_name user_id         is_purchaser         revenue        \n",
+              "                 count nunique        count nunique     sum     max\n",
+              "0      control    3026    2390           54      54  470.56  196.01\n",
+              "1      variant    3044    2393           43      42  179.32   23.04"
             ]
           },
           "metadata": {},
-          "execution_count": 154
+          "execution_count": 183
         }
       ]
     },
@@ -1016,9 +1010,9 @@
         "id": "T3GOyRMLMVeR"
       },
       "source": [
-        "groups.columns = ['users', 'unique_users', 'purchases_count', 'purchasers', 'total_revenue', 'max_revenue']"
+        "groups.columns = ['ab_group','users', 'unique_users', 'purchases_count', 'purchasers', 'total_revenue', 'max_revenue']"
       ],
-      "execution_count": 173,
+      "execution_count": 186,
       "outputs": []
     },
     {
@@ -1026,15 +1020,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 143
+          "height": 112
         },
         "id": "wTqC7UHRhHmV",
-        "outputId": "8fbbcaeb-6f82-4bf1-fe9f-e3265058fdff"
+        "outputId": "5413fc62-c0dc-4e4a-a80b-ab7a565ecb8e"
       },
       "source": [
         "groups"
       ],
-      "execution_count": 174,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1058,6 +1052,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>ab_group</th>\n",
               "      <th>users</th>\n",
               "      <th>unique_users</th>\n",
               "      <th>purchases_count</th>\n",
@@ -1065,19 +1060,11 @@
               "      <th>total_revenue</th>\n",
               "      <th>max_revenue</th>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>variant_name</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>control</th>\n",
+              "      <th>0</th>\n",
+              "      <td>control</td>\n",
               "      <td>3026</td>\n",
               "      <td>2390</td>\n",
               "      <td>54</td>\n",
@@ -1086,7 +1073,8 @@
               "      <td>196.01</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>variant</th>\n",
+              "      <th>1</th>\n",
+              "      <td>variant</td>\n",
               "      <td>3044</td>\n",
               "      <td>2393</td>\n",
               "      <td>43</td>\n",
@@ -1099,16 +1087,15 @@
               "</div>"
             ],
             "text/plain": [
-              "              users  unique_users  ...  total_revenue  max_revenue\n",
-              "variant_name                       ...                            \n",
-              "control        3026          2390  ...         470.56       196.01\n",
-              "variant        3044          2393  ...         179.32        23.04\n",
+              "  ab_group  users  unique_users  ...  purchasers  total_revenue  max_revenue\n",
+              "0  control   3026          2390  ...          54         470.56       196.01\n",
+              "1  variant   3044          2393  ...          42         179.32        23.04\n",
               "\n",
-              "[2 rows x 6 columns]"
+              "[2 rows x 7 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 174
+          "execution_count": 187
         }
       ]
     },
@@ -1129,7 +1116,7 @@
       "source": [
         "groups['purchases_per_user'] = groups['purchases_count'] / groups['purchasers']"
       ],
-      "execution_count": 175,
+      "execution_count": 188,
       "outputs": []
     },
     {
@@ -1140,7 +1127,7 @@
       "source": [
         "groups['arpu'] = groups['total_revenue'] / groups['unique_users']"
       ],
-      "execution_count": 176,
+      "execution_count": 189,
       "outputs": []
     },
     {
@@ -1151,7 +1138,7 @@
       "source": [
         "groups['arppu'] = groups['total_revenue'] / groups['purchasers']"
       ],
-      "execution_count": 177,
+      "execution_count": 190,
       "outputs": []
     },
     {
@@ -1162,7 +1149,7 @@
       "source": [
         "groups['paying_share'] = groups['purchasers'] / groups['unique_users'] * 100"
       ],
-      "execution_count": 178,
+      "execution_count": 191,
       "outputs": []
     },
     {
@@ -1173,7 +1160,7 @@
       "source": [
         "groups['average_check'] = groups['total_revenue'] / groups['purchases_count']"
       ],
-      "execution_count": 180,
+      "execution_count": 192,
       "outputs": []
     },
     {
@@ -1190,15 +1177,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 163
+          "height": 132
         },
         "id": "ZZPbOTGsli96",
-        "outputId": "acdf5308-df7a-4a95-fd04-4bc3dc4f775b"
+        "outputId": "2f332c20-1e42-44ff-e2b2-6aac39915514"
       },
       "source": [
         "groups"
       ],
-      "execution_count": 181,
+      "execution_count": 193,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1222,6 +1209,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>ab_group</th>\n",
               "      <th>users</th>\n",
               "      <th>unique_users</th>\n",
               "      <th>purchases_count</th>\n",
@@ -1234,24 +1222,11 @@
               "      <th>paying_share</th>\n",
               "      <th>average_check</th>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>variant_name</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>control</th>\n",
+              "      <th>0</th>\n",
+              "      <td>control</td>\n",
               "      <td>3026</td>\n",
               "      <td>2390</td>\n",
               "      <td>54</td>\n",
@@ -1265,7 +1240,8 @@
               "      <td>8.714074</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>variant</th>\n",
+              "      <th>1</th>\n",
+              "      <td>variant</td>\n",
               "      <td>3044</td>\n",
               "      <td>2393</td>\n",
               "      <td>43</td>\n",
@@ -1283,16 +1259,15 @@
               "</div>"
             ],
             "text/plain": [
-              "              users  unique_users  ...  paying_share  average_check\n",
-              "variant_name                       ...                             \n",
-              "control        3026          2390  ...      2.259414       8.714074\n",
-              "variant        3044          2393  ...      1.755119       4.170233\n",
+              "  ab_group  users  unique_users  ...     arppu  paying_share  average_check\n",
+              "0  control   3026          2390  ...  8.714074      2.259414       8.714074\n",
+              "1  variant   3044          2393  ...  4.269524      1.755119       4.170233\n",
               "\n",
-              "[2 rows x 11 columns]"
+              "[2 rows x 12 columns]"
             ]
           },
           "metadata": {},
-          "execution_count": 181
+          "execution_count": 193
         }
       ]
     },
